[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "logproc"
authors = [{name = "Thorsten Vitt", email = "tv@thorstenvitt.de"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
repository = "https://github.com/thvitt/logproc"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=1.3.0",
    "pytest-coverage>=0.0",
]
docs = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.16",
    "ruff>=0.14.9",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14t", "3.15"]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
dependency_groups = ["dev"]
package = "wheel"
wheel_build_env = ".pkg"
commands = [[ "pytest", "{tty:--color=yes}", "{posargs}" ]]
